--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
 EditorStartupMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
-GlobalDefaultGameMode="/Script/GameJam2025.GameJam2025GameMode"
+GlobalDefaultGameMode=/Game/BP_GameJam2025GameMode.BP_GameJam2025GameMode_C
 
 [/Script/Engine.RendererSettings]
 r.ReflectionMethod=1
